# LingChat

./: (Dev C++乱码用这个)choose_python_version_and_launch_main.cpp  (VSCode乱码用这个)choose_python_version_and_launch_main.cpp  .env.example  .gitattributes  .gitignore  README-help.md  README.md  pyproject.toml  tsconfig.json
.github/workflows/: build-frontend.yml  build-release.yml  dev-build.yml  release-patch-pack.yml  release.yml
Pytorch/RAG/: README.md  download_embedding_model.py  embedding_service.py
frontend_vue/: components.d.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend_vue/src/: App.vue  components.d.ts  main.ts
ling_chat/: main.py
ling_chat/api/: app_server.py  chat_adventure.py  chat_character.py  chat_clothes.py  chat_history.py  chat_info.py  chat_scene.py  chat_script.py  env_config.py  frontend_routes.py  llm_config_api.py  new_chat_main.py  routes_manager.py
ling_chat/character_plus/: downloader.py  scandb.py
ling_chat/configs/: __init__.py  llm_config.py  llm_toml_config.py
ling_chat/core/: RAG.py  achievement_manager.py  achievement_triggers.py  adventure_trigger.py  memory.py  pic_analyzer.py  service_manager.py  webview.py
ling_chat/game_database/: models.py
ling_chat/schemas/: character_settings.py  schedule_settings.py
ling_chat/update/: update_core.py
ling_chat/utils/: cli.py  cli_parser.py  function.py  http_utils.py  scene_utils.py
others/: README.md  compare_env_files.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
tests/: verify_perception.py
(+297 files in other folders)
