[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ling-chat"
version = "0.3.1-beta1"
description = ""
authors = [
    { name = "0x00-pl", email = "0x00.pl@gmail.com" },
]
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "requests>=2.32.4",
    "aiohttp==3.12.11",
    "pywebview>=5.4",
    "openai>=1.85.0",
    "platformdirs>=4.3.8",
    "python-multipart>=0.0.20",
    "websockets>=15.0.1",
    "mss>=10.0.0",
    "google-generativeai>=0.8.5",
    "py7zr>=1.0.0",
    "chromadb>=1.0.0",
    "onnxruntime>=1.17.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "ruff>=0.14.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.2.1",
]

# 新增部分：明确告诉 setuptools 只打包 ling_chat 目录
[tool.setuptools]
packages = ["ling_chat"]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = 1

[tool.uv.sources]
default = { index = "tuna" }

[tool.uv.pip]
resolution = "highest"
generate-hashes = true
